--- a/style.css
+++ b/style.css
@@ -44,11 +44,16 @@ root {
     background-color: #788a76!important;
   }
   .logo {
-    background-color: #788a76;
+    background-color: #788a76 !important;
   }
   .butnory {
-    width: 50%;
+    width: 100%;
+    
   }
+  
+
+
+
 
 
 
