--- a/style.css
+++ b/style.css
@@ -53,7 +53,14 @@ root {
   .suber {
     background-color: #6ed198!important;
   }
+  .logo1 {
+    background-color: #788a76 !important;
+    color: white!important;
+    border-color: white!important;
+
+  }
   
+
 
 
 
